webcam zoom blog post

--- a/examples/digital_webcam_zoom.html
+++ b/examples/digital_webcam_zoom.html
@@ -2,12 +2,12 @@
 layout: default
 ---
 
-<link rel='stylesheet' href='http://kendo.cdn.telerik.com/2019.3.917/styles/kendo.common.min.css'/>
-<link rel='stylesheet' href='http://kendo.cdn.telerik.com/2019.3.917/styles/kendo.default.min.css'/>
-<link rel='stylesheet' href='http://kendo.cdn.telerik.com/2019.3.917/styles/kendo.default.mobile.min.css'/>
+<link rel='stylesheet' href='https://kendo.cdn.telerik.com/2019.3.917/styles/kendo.common.min.css'/>
+<link rel='stylesheet' href='https://kendo.cdn.telerik.com/2019.3.917/styles/kendo.default.min.css'/>
+<link rel='stylesheet' href='https://kendo.cdn.telerik.com/2019.3.917/styles/kendo.default.mobile.min.css'/>
 
 <script src='https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js'></script>
-<script src='http://kendo.cdn.telerik.com/2019.3.917/js/kendo.ui.core.min.js'></script>
+<script src='https://kendo.cdn.telerik.com/2019.3.917/js/kendo.ui.core.min.js'></script>
 
 <style>
   video, canvas {
